--- a/style/Body.css
+++ b/style/Body.css
@@ -81,7 +81,7 @@
                   transition: all 0.3s ease;
 }
 #spotify-container-mobile{
-             width: 587px;
+             width: 80%;
              height: 359px;
              background-color: blu;
              margin: auto;
@@ -90,7 +90,7 @@
              padding-bottom: 80px;
 }
 #slider{
-              width:500px;
+              width: 80%;
               height: 359px;
               background-color: bue;
               margin: auto;
@@ -175,7 +175,7 @@
 
 #spotify-container-desktop{
               width: 100%;
-              height: 366px;
+              height: 500px;
               margin: auto;
               margin-top:30px;
               margin-bottom:80px;
@@ -258,7 +258,7 @@
         background-color: rd;
         width: 30%;
         height: 479px;
-        margin: auto;
+        margin: 100px auto;
 }
 .submitions{
         position: relative;
